--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -38,7 +38,7 @@
   <div class="flex align-middle">
     <button mat-fab extended color="primary" (click)="openCreateLoadRequestModal()">
       <mat-icon fontIcon="add"></mat-icon>
-      Creat Request
+      Create Request
     </button>
     <button mat-fab extended color="primary">
       <mat-icon fontIcon="file_download"></mat-icon>
