--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-between m-5">
-  <form [formGroup]="searchCriteria" class="flex justify-between" (ngSubmit)="onSubmit()">
+  <form [formGroup]="searchCriteria" class="flex justify-between">
     <mat-form-field>
       <mat-label>Filter by all fields</mat-label>
       <input matInput formControlName="filterTerm" placeholder="Ex. LOINC" #filterTerm>
@@ -26,7 +26,7 @@
         <mat-option value="1">My Requests</mat-option>
       </mat-select>
     </mat-form-field>
-    <button mat-fab extended color="primary" type="submit" [disabled]="!searchCriteria.valid">
+    <button mat-fab extended color="primary" type="submit">
       <mat-icon fontIcon="search"></mat-icon>
       Search
     </button>
@@ -134,7 +134,7 @@
       <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let row" [attr.colspan]="columnsToDisplayWithExpand.length">
           <div class="example-element-detail"
-               [@detailExpand]="row == expandedElement ? 'expanded' : 'collapsed'">
+               [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
             <div class="example-element-description" *ngIf="expandedElement === row">
               <app-load-request-activity [requestId]="row.requestId"></app-load-request-activity>
             </div>
@@ -145,8 +145,7 @@
       <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
       <tr mat-row *matRowDef="let row; columns: columnsToDisplayWithExpand;"
           class="example-element-row"
-          [class.example-expanded-row]="expandedElement === row"
-          (click)="expandedElement = expandedElement === row ? null : row">
+          [class.example-expanded-row]="expandedElement === row">
       </tr>
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
