enalbe tailwind important

--- a/projects/ts-etl-ui/src/log-in-modal/log-in-modal.component.html
+++ b/projects/ts-etl-ui/src/log-in-modal/log-in-modal.component.html
@@ -1,6 +1,8 @@
 <h2 mat-dialog-title>Login with Following</h2>
 <mat-dialog-content class="mat-typography">
-  <button mat-raised-button (click)="redirectToLogin()">UTS</button>
+  <div class="mt-3">
+    <button mat-raised-button (click)="redirectToLogin()">UTS</button>
+  </div>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Close</button>
