--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -40,7 +40,7 @@
       <mat-icon fontIcon="add"></mat-icon>
       Create Request
     </button>
-    <button mat-fab extended color="primary">
+    <button mat-fab extended color="primary" (click)="download()">
       <mat-icon fontIcon="file_download"></mat-icon>
       Download
     </button>
