clean up scss, using global loading spinner

--- a/projects/ts-etl-ui/src/load-request-activity/load-request-activity.component.html
+++ b/projects/ts-etl-ui/src/load-request-activity/load-request-activity.component.html
@@ -1,7 +1,4 @@
-<div class="example-container mat-elevation-z8 m-5">
-  <div class="example-loading-shade" *ngIf="isLoadingResults">
-    <mat-spinner></mat-spinner>
-  </div>
+<div class="mat-elevation-z8 m-5">
   <div>
     <mat-form-field>
       <mat-label>Filter</mat-label>
