--- a/projects/ts-etl-ui/src/manage/manage.component.html
+++ b/projects/ts-etl-ui/src/manage/manage.component.html
@@ -1,6 +1,4 @@
-<mat-drawer-container class="example-container" autosize>
-  <div class="example-sidenav-content">
-    <main>
+  <div class="example-sidenav-content mx-5">
       <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start" fitInkBarToContent>
         <mat-tab label="Load Request">
           <app-load-request></app-load-request>
@@ -12,6 +10,4 @@
           <app-code-system></app-code-system>
         </mat-tab>
       </mat-tab-group>
-    </main>
   </div>
-</mat-drawer-container>
