--- a/projects/ts-etl-ui/src/app/app.component.html
+++ b/projects/ts-etl-ui/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <button mat-raised-button routerLink="/">Home</button>
-  <span class="example-spacer"></span>
+  <span class="flex-1"></span>
   <ng-container *ngIf="(userService.user$ | async) as user;  else logInTemplate">
     <button mat-button [matMenuTriggerFor]="userMenu">{{user.utsUser.username}}</button>
   </ng-container>
@@ -16,5 +16,11 @@
     </button>
   </ng-template>
 </mat-toolbar>
-
-<router-outlet></router-outlet>
+<mat-drawer-container class="min-h-svh" autosize>
+  <div class="example-loading-shade" *ngIf="loadingService.loading$ | async">
+    <mat-spinner></mat-spinner>
+  </div>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</mat-drawer-container>
