--- a/projects/ts-etl-ui/src/please-log-in/please-log-in.component.html
+++ b/projects/ts-etl-ui/src/please-log-in/please-log-in.component.html
@@ -1,3 +1,3 @@
-<p>
+<h1 class="flex justify-center align-middle">
   This application requires you to log in. Please do so before proceeding.
-</p>
+</h1>
