--- a/projects/ts-etl-ui/src/version-qa-detail-modal/version-qa-detail-modal.component.html
+++ b/projects/ts-etl-ui/src/version-qa-detail-modal/version-qa-detail-modal.component.html
@@ -1,7 +1,37 @@
 <h2 mat-dialog-title>Version QA Detail</h2>
 <mat-dialog-content class="mat-typography">
-  <div class="mt-3"></div>
+    <div class="flex">
+        <div>
+        <table mat-table [dataSource]="dataSource">
+            <!-- Key Column -->
+            <ng-container matColumnDef="key">
+                <th mat-header-cell *matHeaderCellDef>Key</th>
+                <td mat-cell *matCellDef="let element">{{element.label}}</td>
+            </ng-container>
+    
+            <!-- Value Column -->
+            <ng-container matColumnDef="value">
+                <th mat-header-cell *matHeaderCellDef>Value</th>
+                <td mat-cell *matCellDef="let element">
+                    {{element.key}}
+                    <ng-container [ngSwitch]="element.key">
+                        <ng-container [ngSwitchCase]="'codeSystem'">Go to QA Report</ng-container>
+                        <ng-container [ngSwitchCase]="'version'">Anolyze Code System Data</ng-container>
+                        <ng-container [ngSwitchCase]="'loadNumber'">Analyze Row Source Data</ng-container>
+                        <ng-container [ngSwitchCase]="'requestId'">View Source Data Files</ng-container>
+                        <ng-container ngSwitchDefault>{{element.value}}</ng-container>
+                    </ng-container>
+                </td>
+            </ng-container>
+    
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>            
+    </div>
+</div>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close>Close</button>
+    <button mat-raised-button color="primary">Accept</button>
+    <button mat-raised-button color="warn">Reject</button>
+    <button mat-raised-button mat-dialog-close cdkFocusInitial>Close</button>
 </mat-dialog-actions>
