--- a/projects/ts-etl-ui/src/version-qa-detail-modal/version-qa-detail-modal.component.html
+++ b/projects/ts-etl-ui/src/version-qa-detail-modal/version-qa-detail-modal.component.html
@@ -1,37 +1,70 @@
 <h2 mat-dialog-title>Version QA Detail</h2>
 <mat-dialog-content class="mat-typography">
-    <div class="flex">
-        <div>
-        <table mat-table [dataSource]="dataSource">
-            <!-- Key Column -->
-            <ng-container matColumnDef="key">
-                <th mat-header-cell *matHeaderCellDef>Key</th>
-                <td mat-cell *matCellDef="let element">{{element.label}}</td>
-            </ng-container>
-    
-            <!-- Value Column -->
-            <ng-container matColumnDef="value">
-                <th mat-header-cell *matHeaderCellDef>Value</th>
-                <td mat-cell *matCellDef="let element">
-                    {{element.key}}
-                    <ng-container [ngSwitch]="element.key">
-                        <ng-container [ngSwitchCase]="'codeSystem'">Go to QA Report</ng-container>
-                        <ng-container [ngSwitchCase]="'version'">Anolyze Code System Data</ng-container>
-                        <ng-container [ngSwitchCase]="'loadNumber'">Analyze Row Source Data</ng-container>
-                        <ng-container [ngSwitchCase]="'requestId'">View Source Data Files</ng-container>
-                        <ng-container ngSwitchDefault>{{element.value}}</ng-container>
-                    </ng-container>
-                </td>
-            </ng-container>
-    
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>            
-    </div>
-</div>
+  <mat-card class="example-card">
+    <mat-card-content>
+      <table mat-table class="example-table-container" [dataSource]="dataSource">
+        <!-- Key Column -->
+        <ng-container matColumnDef="key">
+          <th mat-header-cell *matHeaderCellDef>Key</th>
+          <td mat-cell *matCellDef="let element">{{element.label}}</td>
+        </ng-container>
+
+        <!-- Value Column -->
+        <ng-container matColumnDef="value">
+          <th mat-header-cell *matHeaderCellDef>Value</th>
+          <td mat-cell *matCellDef="let element">
+            <div class="flex justify-between" [ngSwitch]="element.key">
+              {{element.value}}
+              <button mat-raised-button *ngSwitchCase="'codeSystemName'">Go to QA Report</button>
+              <button mat-raised-button *ngSwitchCase="'version'">Analyze Code System Data</button>
+              <button mat-raised-button *ngSwitchCase="'loadNumber'">Analyze Row Source Data</button>
+              <button mat-raised-button *ngSwitchCase="'requestId'">View Source Data Files</button>
+              <ng-container *ngSwitchDefault></ng-container>
+            </div>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <mat-divider></mat-divider>
+    </mat-card-content>
+  </mat-card>
+  <mat-divider class="my-5"></mat-divider>
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-subtitle>Activity History</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <table class="example-table-container">
+        <thead>
+        <tr>
+          <th>Sequence</th>
+          <th>Action</th>
+          <th>Updated Time</th>
+          <th>Number of Notes</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr class="example-element-row">
+          <td>Current</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr class="example-element-row">
+          <td>1st</td>
+          <td>Reject</td>
+          <td></td>
+          <td>1</td>
+        </tr>
+        </tbody>
+      </table>
+    </mat-card-content>
+  </mat-card>
 </mat-dialog-content>
 <mat-dialog-actions>
-    <button mat-raised-button color="primary">Accept</button>
-    <button mat-raised-button color="warn">Reject</button>
-    <button mat-raised-button mat-dialog-close cdkFocusInitial>Close</button>
+  <button mat-raised-button color="primary">Accept</button>
+  <button mat-raised-button color="warn">Reject</button>
+  <button mat-raised-button mat-dialog-close cdkFocusInitial>Close</button>
 </mat-dialog-actions>
