--- a/projects/ts-etl-ui/src/version-qa/version-qa.component.html
+++ b/projects/ts-etl-ui/src/version-qa/version-qa.component.html
@@ -10,9 +10,7 @@
 
       <ng-container matColumnDef="loadNumber">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Load Number</th>
-        <td mat-cell *matCellDef="let row">
-          <button mat-button color="primary" (click)="openVersionDetailModal(row)">{{row.loadNumber}}</button>
-        </td>
+        <td mat-cell *matCellDef="let row">{{row.loadNumber}}</td>
       </ng-container>
 
       <ng-container matColumnDef="codeSystemName">
@@ -70,7 +68,20 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+          [class.example-expanded-row]="expandedElement === row"
+          (click)="expandedElement = expandedElement === row ? null : row"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
+          <div class="example-element-detail" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
+            <div class="w-full">
+              <app-version-qa-detail [data]="row"></app-version-qa-detail>
+            </div>
+          </div>
+        </td>
+      </ng-container>
 
       <tr *matNoDataRow>
         <td class="mat-cell" colspan="9">
