--- a/projects/ts-etl-ui/src/version-qa-review-modal/version-qa-review-modal.component.html
+++ b/projects/ts-etl-ui/src/version-qa-review-modal/version-qa-review-modal.component.html
@@ -12,7 +12,9 @@
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Available Date</mat-label>
-        <input matInput formControlName="availableDate" >
+        <input matInput formControlName="availableDate" [matDatepicker]="picker">
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>      
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Notes</mat-label>
