--- a/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
+++ b/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
@@ -35,10 +35,10 @@
     <mat-card-subtitle>Activity History</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <table mat-table [dataSource]="qaActivityHistory">
+    <table mat-table [dataSource]="qaActivityHistory" multiTemplateDataRows>
       <ng-container matColumnDef="sequence">
         <th mat-header-cell *matHeaderCellDef> Sequence </th>
-        <td mat-cell *matCellDef="let i = index"> {{i}} </td>
+        <td mat-cell *matCellDef="let i = dataIndex"> {{i}} </td>
       </ng-container>
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
@@ -59,7 +59,44 @@
         <td></td>
         <td></td>
       </tr>
-      <tr mat-row *matRowDef="let row; columns: qaActivityColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: qaActivityColumns;"
+        [class.example-expanded-row]="expandedActivity === row"
+        (click)="expandedActivity = expandedActivity === row ? null : row"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let row" [attr.colspan]="qaActivityColumns.length">
+          <div class="example-element-detail" [@detailExpand1]="row === expandedActivity ? 'expanded' : 'collapsed'">
+            <div class="w-full">
+              <table mat-table [dataSource]="row.qaActivityHistory.notes">
+                <tr mat-header-row *matHeaderRowDef="notesColumns"></tr>
+                <ng-container matColumnDef="tags">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Tags</th>
+                  <td mat-cell *matCellDef="let noteRow">TODO: What Goes Here?</td>
+                </ng-container>
+                <ng-container matColumnDef="notes">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Notes</th>
+                  <td mat-cell *matCellDef="let noteRow">{{noteRow.notes}}</td>
+                </ng-container>
+                <ng-container matColumnDef="createdBy">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Created By</th>
+                  <td mat-cell *matCellDef="let noteRow">{{noteRow.createdBy}}</td>
+                </ng-container>
+                <ng-container matColumnDef="createdTime">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Created Time</th>
+                  <td mat-cell *matCellDef="let noteRow">{{noteRow.createdTime || row.updatedTime}}</td>
+                </ng-container>
+                <ng-container matColumnDef="action">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Action</th>
+                  <td mat-cell *matCellDef="let noteRow">TODO: View</td>
+                </ng-container>
+                <tr mat-row *matRowDef="let noteRow; columns: notesColumns"></tr>
+              </table>
+            </div>
+          </div>
+        </td>
+      </ng-container>
+
     </table>
   </mat-card-content>
 </mat-card>
