--- a/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
+++ b/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
@@ -68,8 +68,7 @@
         <td mat-cell *matCellDef="let row" [attr.colspan]="qaActivityColumns.length">
           <div class="example-element-detail" [@detailExpand1]="row === expandedActivity ? 'expanded' : 'collapsed'">
             <div class="w-full">
-              <table mat-table [dataSource]="row.qaActivityHistory.notes">
-                <tr mat-header-row *matHeaderRowDef="notesColumns"></tr>
+              <table mat-table [dataSource]="row.notes">
                 <ng-container matColumnDef="tags">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Tags</th>
                   <td mat-cell *matCellDef="let noteRow">TODO: What Goes Here?</td>
@@ -90,6 +89,7 @@
                   <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Action</th>
                   <td mat-cell *matCellDef="let noteRow">TODO: View</td>
                 </ng-container>
+                <tr mat-header-row *matHeaderRowDef="notesColumns"></tr>
                 <tr mat-row *matRowDef="let noteRow; columns: notesColumns"></tr>
               </table>
             </div>
