--- a/projects/ts-etl-ui/src/code-system/code-system.component.html
+++ b/projects/ts-etl-ui/src/code-system/code-system.component.html
@@ -1,1 +1,30 @@
-<p>code-system works!</p>
+<mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. LOINC" #input>
+</mat-form-field>
+
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+
+        <ng-container matColumnDef="codeSystemName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Code System</th>
+            <td mat-cell *matCellDef="let row"> {{row.codeSystemName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Title</th>
+            <td mat-cell *matCellDef="let row"> {{row.title}}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        </tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25]" aria-label="Select page of code systems"></mat-paginator>
+</div>
+
