--- a/projects/ts-etl-ui/src/styles.scss
+++ b/projects/ts-etl-ui/src/styles.scss
@@ -61,6 +61,7 @@ tr.example-element-row:not(.example-expanded-row):active {
 .example-element-detail {
   overflow: hidden;
   display: flex;
+  justify-content: center;
 }
 
 .example-element-description {
