--- a/projects/ts-etl-ui/src/code-system-version/code-system-version.component.html
+++ b/projects/ts-etl-ui/src/code-system-version/code-system-version.component.html
@@ -1,23 +1,37 @@
 <div class="mat-elevation-z8 m-5">
     <mat-form-field>
         <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. LOINC" #input>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Draft" #input>
     </mat-form-field>
     <div class="example-table-container">
         <table [dataSource]="dataSource" mat-table matSort multiTemplateDataRows>
-
-            <ng-container matColumnDef="codeSystemName">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Code System</th>
-                <td mat-cell *matCellDef="let element"> {{element.codeSystemName}} </td>
+            <ng-container matColumnDef="versionName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Version Name</th>
+                <td mat-cell *matCellDef="let element"> {{element.versionName}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="title">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Title</th>
-                <td mat-cell *matCellDef="let element"> {{element.title}}</td>
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Status</th>
+                <td mat-cell *matCellDef="let element"> {{element.status}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="publishedDate">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Published Date</th>
+                <td mat-cell *matCellDef="let element"> {{element.publishedDate}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="effectiveDate">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Effective Date</th>
+                <td mat-cell *matCellDef="let element"> {{element.effectiveDate}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="availableDate">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Available Date</th>
+                <td mat-cell *matCellDef="let element"> {{element.availableDate}}</td>
             </ng-container>
 
             <ng-container matColumnDef="expand">
-                <th mat-header-cell *matHeaderCellDef aria-label="row actions">Versions</th>
+                <th mat-header-cell *matHeaderCellDef aria-label="row actions">Codes</th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-icon-button aria-label="expand row"
                             (click)="(expandedElement = expandedElement === element ? null : element); $event.stopPropagation()">
@@ -35,7 +49,7 @@
                 <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplayWithExpand.length">
                     <div class="example-element-detail"
                          [@detailExpand]="element === expandedElement ? 'expanded' : 'collapsed'">
-                        <app-code-system-version [versions]="element.versions"></app-code-system-version>
+                        <app-code-system-code [codes]="element.codes"></app-code-system-code>
                     </div>
                 </td>
             </ng-container>
@@ -55,5 +69,5 @@
             </tr>
         </table>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25]" aria-label="Select page of code systems"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25]" aria-label="Select page of code system versions"></mat-paginator>
     </div>
