--- a/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
+++ b/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
@@ -66,7 +66,7 @@
 
       <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let row" [attr.colspan]="qaActivityColumns.length">
-          <div class="example-element-detail" [@detailExpand1]="row === expandedActivity ? 'expanded' : 'collapsed'">
+          <div class="example-element-detail" [@detailExpand]="row === expandedActivity ? 'expanded' : 'collapsed'">
             <div class="w-full">
               <table mat-table [dataSource]="row.notes">
                 <ng-container matColumnDef="tags">
