--- a/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
+++ b/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
@@ -101,7 +101,7 @@
   </mat-card-content>
 </mat-card>
 <div class="m-7">
-  <button mat-raised-button color="primary" (click)="accept()">Accept</button>
-  <button mat-raised-button color="warn">Reject</button>    
+  <button mat-raised-button color="primary" (click)="action('Accept')">Accept</button>
+  <button mat-raised-button color="warn" (click)="action('Reject')">Reject</button>    
 </div>
 
