--- a/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
+++ b/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
@@ -21,7 +21,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Source File Path</mat-label>
         <input matInput formControlName="sourceFilePath" class="hidden">
-        <input type="file" #fileUpload class="hidden" (change)="onFileSelected($event)">
+        <input type="file" #fileUpload class="hidden" (change)="onFileSelected($event)" id="sourcePathFile">
         <div class="file-upload">
           {{loadRequestCreationForm.get('sourceFilePath')?.value || "No file selected yet."}}
           <button mat-mini-fab color="primary" class="upload-btn float-right" type="button"
