--- a/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
+++ b/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
@@ -24,6 +24,12 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <tr *matNoDataRow>
+          <td class="mat-cell" colspan="9">
+            No results found.
+          </td>
+        </tr>
       </table>
       <mat-divider></mat-divider>
     </mat-card-content>
@@ -35,7 +41,7 @@
     <mat-card-subtitle>Activity History</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <table mat-table [dataSource]="qaActivityHistory" multiTemplateDataRows>
+    <table mat-table [dataSource]="qaActivityHistory()" multiTemplateDataRows>
       <ng-container matColumnDef="sequence">
         <th mat-header-cell *matHeaderCellDef> Sequence </th>
         <td mat-cell *matCellDef="let i = dataIndex"> {{i}} </td>
@@ -63,6 +69,12 @@
         [class.example-expanded-row]="expandedActivity === row"
         (click)="expandedActivity = expandedActivity === row ? null : row"></tr>
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
+      <tr *matNoDataRow>
+        <td class="mat-cell" colspan="9">
+          No results found.
+        </td>
+      </tr>
 
       <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let row" [attr.colspan]="qaActivityColumns.length">
@@ -102,6 +114,6 @@
 </mat-card>
 <div class="m-7">
   <button mat-raised-button color="primary" (click)="action('Accept')">Accept</button>
-  <button mat-raised-button color="warn" (click)="action('Reject')">Reject</button>    
+  <button mat-raised-button color="warn" (click)="action('Reject')">Reject</button>
 </div>
 
