--- a/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
+++ b/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
@@ -31,12 +31,21 @@
         </div>
       </mat-form-field>
       <div class="mb-5">
-        <label id="load-request-type-label" for="load-request-type-radio">Select A Type</label>
+        <label id="load-request-type-label" for="load-request-type-radio">Request Type</label>
         <mat-radio-group aria-label-by="load-request-type-label" id="load-request-type-radio"
                          formControlName="type">
-          <mat-radio-button value="regular">Regular</mat-radio-button>
-          <mat-radio-button value="emergency">Emergency</mat-radio-button>
-          <mat-radio-button value="scheduled">Scheduled</mat-radio-button>
+          <div class="ml-20">
+            <mat-radio-button value="regular" class="block">Regular (Unscheduled)</mat-radio-button>
+            <mat-radio-button value="emergency" class="block">Emergency (Unscheduled)</mat-radio-button>
+            <mat-radio-button value="scheduled">Scheduled</mat-radio-button>
+            <mat-form-field appearance="outline" class="ml-20"
+                            *ngIf="loadRequestCreationForm.get('type')?.value === 'scheduled'">
+              <mat-label>Date</mat-label>
+              <input matInput formControlName="scheduleDate" [matDatepicker]="picker">
+              <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+          </div>
         </mat-radio-group>
       </div>
       <mat-form-field appearance="fill">
