--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -8,11 +8,11 @@
       <mat-label>Any Request date</mat-label>
       <mat-select placeholder="Any Request date" formControlName="requestDateType">
         <mat-option value="0">Any Request date</mat-option>
-        <mat-option value="1">Today's requests</mat-option>
-        <mat-option value="2">Requests of this week</mat-option>
-        <mat-option value="3">Requests of last week</mat-option>
-        <mat-option value="4">Requests of this month</mat-option>
-        <mat-option value="5">Requests of last month</mat-option>
+        <mat-option value="1">Today's</mat-option>
+        <mat-option value="2">This week's</mat-option>
+        <mat-option value="3">Last week's</mat-option>
+        <mat-option value="4">This month's</mat-option>
+        <mat-option value="5">Last month's</mat-option>
       </mat-select>
     </mat-form-field>
     <mat-form-field>
