--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -50,7 +50,7 @@
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col m-2">
               <label for="requestIdFilterInput" class="m-2" mat-sort-header disableClear>Request ID</label>
-              <input id="requestIdFilterInput" matInput formControlName="requestId" placeholder="Ex. 148" type="number">
+              <input id="requestIdFilterInput" class="w-3/4" matInput formControlName="requestId" placeholder="Ex. 148" type="number">
             </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestId}}</td>
