--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -49,11 +49,8 @@
         <ng-container matColumnDef="requestId">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col m-2">
-              <span class="m-2" mat-sort-header disableClear>Request ID</span>
-              <mat-form-field floatLabel="auto">
-                <mat-label>Filter Request ID</mat-label>
-                <input matInput formControlName="requestId" placeholder="Ex. 152" type="number">
-              </mat-form-field>
+              <label for="requestIdFilterInput" class="m-2" mat-sort-header disableClear>Request ID</label>
+              <input id="requestIdFilterInput" class="w-3/4" matInput formControlName="requestId" placeholder="Ex. 148" type="number">
             </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestId}}</td>
