--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -62,7 +62,20 @@
         </ng-container>
 
         <ng-container matColumnDef="codeSystemName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Code System Name</th>
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <div class="flex flex-col m-2">
+              <label for="codeSystemSearch" class="m-2" mat-sort-header disableClear>Code System</label>
+              <select id="codeSystemSearch" class="w-20" formControlName="codeSystemName">
+                <option value="">ALL</option>
+                <option>RXNORM</option>
+                <option>LOINC</option>
+                <option>SNOMEDCT</option>
+                <option>CDCREC</option>
+                <option>CPT</option>
+                <option>HPO</option>
+              </select>
+            </div>
+            </th>
           <td mat-cell *matCellDef="let row">{{row.codeSystemName}}</td>
         </ng-container>
 
