--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -80,8 +80,11 @@
         </ng-container>
 
         <ng-container matColumnDef="sourceFilePath">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-            Source File Path
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <div class="flex flex-col m-2">
+              <label for="sourceFilePathInput" class="m-2" mat-sort-header disableClear>Source File Path</label>
+              <input id="sourceFilePathInput" matInput class="w-40" formControlName="sourceFilePath" placeholder="/usr/bin">
+            </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.sourceFilePath}}</td>
         </ng-container>
