--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -56,11 +56,6 @@
           <td mat-cell *matCellDef="let row">{{row.requestId}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Type</th>
-          <td mat-cell *matCellDef="let row">{{row.type}}</td>
-        </ng-container>
-
         <ng-container matColumnDef="codeSystemName">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
@@ -87,8 +82,11 @@
         </ng-container>
 
         <ng-container matColumnDef="requestSubject">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-            Request Subject
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <div class="flex flex-col m-2">
+              <label for="subjectInput" class="m-2" mat-sort-header disableClear>Subject</label>
+              <input id="subjectInput" matInput class="w-40" formControlName="requestSubject" placeholder="subject...">
+            </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestSubject}}</td>
         </ng-container>
@@ -100,11 +98,9 @@
           <td mat-cell *matCellDef="let row">{{row.requestStatus}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="version">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-            Version
-          </th>
-          <td mat-cell *matCellDef="let row">{{row.version}}</td>
+        <ng-container matColumnDef="type">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Request Type</th>
+          <td mat-cell *matCellDef="let row">{{row.type}}</td>
         </ng-container>
 
         <ng-container matColumnDef="availableDate">
