--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -99,7 +99,18 @@
         </ng-container>
 
         <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Request Type</th>
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <div class="flex flex-col m-2">
+              <label for="requestTypeInput" class="m-2" mat-sort-header disableClear>Request Type</label>
+              <select id="requestTypeInput" class="w-20" formControlName="type">
+                <option value="">ALL</option>
+                <option>regular</option>
+                <option>scheduled</option>
+                <option>emergency</option>
+                <option>masterJob</option>
+              </select>
+            </div>
+          </th>
           <td mat-cell *matCellDef="let row">{{row.type}}</td>
         </ng-container>
 
